# A2A-MCP-Dual-Protocol-Reference-Agent

./: .env.example  Makefile  ORCHESTRATOR_LOG.md  README.md  pyproject.toml  requirements.txt
docs/: BUILD_NOTES.md  MODELS.md  PROTOCOLS.md  PUBLISH.md
plans/: plan.md
src/a2a_mcp_agent/: __init__.py  a2a_server.py  agent.py  cli.py  config.py  deepseek_client.py  mcp_client.py  ui.py
src/a2a_mcp_agent/mcp_servers/: __init__.py  file_system.py  github.py  web_search.py
src/a2a_mcp_agent/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_a2a_server.py  test_agent.py  test_config.py  test_deepseek_client.py  test_mcp_client.py  test_mcp_servers.py
